fix social links, dark scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,3 +37,20 @@ body {
 body {
   font-family: "Poppins", sans-serif;
 }
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  @apply bg-gray-900;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  @apply bg-gray-900;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgb(128, 126, 126);
+}
